--- a/docs/015_arm.md
+++ b/docs/015_arm.md
@@ -1,3 +1,4 @@
+[返回主页面](..)
 ## 小知识：armeabi-v7a 和 arm64-v8a区别
 
 >我们在下载某些开源播放工具的时候，经常看到 armeabi-v7a 和 arm64-v8a 字样的下载吧，很多朋友一脸懵，搞不清楚自己该用哪个，今天就简单介绍一下他们的区别。
